# hail

./: build.yaml
benchmark/python/benchmark_hail/run/: combiner_benchmarks.py
docker/: requirements.txt  service-base-requirements.txt
hail/: Makefile  build.gradle
hail/hail/src/is/hail/asm4s/: CodeBuilder.scala
hail/python/: pinned-requirements.txt  requirements.txt
hail/python/dev/: pinned-requirements.txt  requirements.txt
hail/python/hail/: table.py
hail/python/hail/experimental/: function.py  vcf_combiner.py
hail/python/hail/experimental/vcf_combiner/: vcf_combiner.py
hail/python/hail/methods/: impex.py
hail/python/hail/vds/: methods.py
hail/python/hailtop/hailctl/: rich_output.py
hail/python/hailtop/hailctl/config/: cli.py
hail/python/scripts/: run_combiner.py
hail/python/test/hail/: test_ir.py
hail/python/test/hail/table/: test_table.py
hail/python/test/hailtop/hailctl/config/: conftest.py  test_cli.py
hail/scripts/: rocket_surgery.py
hail/src/main/c/: Makefile
hail/src/main/scala/: Bench.scala
hail/src/main/scala/is/hail/: HailContext.scala  HailFeatureFlags.scala
hail/src/main/scala/is/hail/annotations/: CodeOrdering.scala  OrderedRVIterator.scala
hail/src/main/scala/is/hail/backend/: Backend.scala
hail/src/main/scala/is/hail/expr/: Parser.scala
hail/src/main/scala/is/hail/rvd/: OrderedRVD.scala
python/hail/experimental/: vcf_combiner.py
rssvc/: Cargo.toml  Dockerfile  deployment.yaml
rssvc/src/: main.rs  trace_layer.rs
scorecard/: Dockerfile  Makefile  requirements.txt
(+43 files in other folders)
