[package]
name = "hail-hello-service"
version = "0.1.0"
edition = "2018"

[dependencies]
axum = "0.1.3"
color-eyre = "0.5.11"
eyre = "0.6.5"
hyper = { version = "0.14.1", features = ["full"] }
tokio = { version = "1.9.0", features = ["full"] }
tower = { version = "0.4.8", features = ["full"] }
tower-http = { version = "0.1.1", features = ["full"] }
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
uuid = { version = "0.8.1", features = ["v4"] }
